data/derived/fa15/progs/unify/prog3483.ml.out
Characters 74-79:
  |_-> bigAdd ((mulByDigit ((i-1) l)) l);;
                            ^^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
